# Geppetto

./: .terraform.lock.hcl  README.md  app.yaml  build.sh  docker-compose.yml  main.tf  provider.tf  variables.tf
.trunk/: trunk.yaml
geppetto_api/: .pre-commit-config.yaml  pyproject.toml
geppetto_api/scripts/: dev.sh
geppetto_api/src/geppetto_api/: cli.py  main.py
geppetto_api/src/geppetto_api/api/: __init__.py  health.py
geppetto_api/src/geppetto_api/models/: __init__.py  base.py
geppetto_api/src/geppetto_api/services/: __init__.py
